--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     //"python.defaultInterpreterPath": "./venv/bin/python",
     "python.envFile": "${workspaceFolder}/.env",
     "python.terminal.activateEnvironment": true,
+    "python.terminal.executeInFileDir": false,
     "python.testing.pytestEnabled": true,
     "python.testing.pytestArgs": [
         "tests"
