--- a/src/flowcad/config/equipment/equipment_config.json
+++ b/src/flowcad/config/equipment/equipment_config.json
@@ -3,7 +3,7 @@
     "pump": {
       "display_name": "pompes",
       "equipment_items": [
-            "pompe_simple"
+            "p1"
           ]
     },
     "valves": {
@@ -13,14 +13,15 @@
           "display_name": "Vannes d'arrêt",
           "equipment_items": [
             "vanne_boisseau",
-            "vanne_arret"
+            "V1"
           ]
         },
         "vannes_reglage": {
           "display_name": "Vannes de Régulation",
           "equipment_items": [
             "vannes_3V_M_p",
-            "vannes_3V_D_p"
+            "vannes_3V_D_p",
+            "vannes_2V_p"
           ]
         },
         "vannes_equilibrage": {
@@ -59,27 +60,27 @@
     "Boundary": {
       "display_name": "Conditions Limites",
       "equipment_items": [
-        "Fixed_pressure",
-        "Fixed_flowrate"
+        "BC_P",
+        "BC_V"
       ]
     },
     "Junctions": {
       "display_name": "Jonctions",
       "equipment_items": [
-        "junction_3pipes"
+        "T3p"
       ]
     }
   },
 
   "equipment_definitions": {
-    "pompe_simple": {
+    "p1": {
       "display_name": "Pompe",
       "description": "pompe centrifuge",
       "icon_svg": "icons/pompes/pompe_simple.svg",
       "color": "#FF6B6B",
       "equipment_class": "PumpEquipment",
       "properties": {
-        "curve_points": [[20, 10]],
+        "curve_points": [[0.04, 20]],
         "elevation": 0.0
       },
       "results": {
@@ -88,16 +89,16 @@
         "pressure_out": 0.0
       }
     },
-    "vanne_arret": {
+    "V1": {
       "display_name": "Vanne d'arrêt",
       "description": "vanne d'arrêt",
       "icon_svg": "icons/vannes/V_arret.svg",
       "color": "#FF6B6B",
       "equipment_class": "HydraulicResistanceEquipment",
       "properties": {
-        "prop1": 100.0,
-        "prop2": 50.0,
-        "prop3": 0.75
+        "diameter_m": 2.0,
+        "zeta": 1.0,
+        "elevation": 0
       },
       "results": {
         "flow_rate": 0.0,
@@ -138,6 +139,22 @@
         "flow_rate": 0.0,
         "pressure_in": 0.0,
         "pressure_out": 0.0
+      }
+    },"vannes_2V_p": {
+      "display_name": "Vanne 2 voies, progressive",
+      "description": "vanne 2 voies, progressive",
+      "icon_svg": "icons/vannes/V2V.svg",
+      "color": "#FF6B6B",
+      "equipment_class": "HydraulicResistanceEquipment",
+      "properties": {
+        "prop1": 100.0,
+        "prop2": 50.0,
+        "prop3": 0.75
+      },
+      "results": {
+        "flow_rate": 0.0,
+        "pressure_1": 0.0,
+        "pressure_2": 0.0
       }
     },
     "vannes_3V_M_p": {
@@ -262,48 +279,45 @@
         "pressure_out": 0.0
       }
     },
-    "Fixed_pressure": {
+    "BC_P": {
       "display_name": "Pression Fixe",
       "description": "Condition limite de pression fixe",
-      "icon_svg": "icons/boundary/fixed_pressure.svg",
+      "icon_svg": "icons/BC/BC_pression.svg",
       "color": "#1E90FF",
       "equipment_class": "PressureBoundaryConditionEquipment",
       "properties": {
-        "prop1": 100.0,
-        "prop2": 50.0,
-        "prop3": 0.75
+        "pressure_bar": 3.0,
+        "elevation": 0.0
       },
       "results": {
         "flow_rate": 0.0,
         "pressure_out": 0.0
       }
     },
-    "Fixed_flowrate": {
+    "BC_V": {
       "display_name": "Débit Fixe",
       "description": "Condition limite de débit fixe",
-      "icon_svg": "icons/boundary/fixed_flowrate.svg",
+      "icon_svg": "icons/BC/BC_flowrate.svg",
       "color": "#1E90FF",
       "equipment_class": "FlowRateBoundaryConditionEquipment",
       "properties": {
-        "prop1": 100.0,
-        "prop2": 50.0,
-        "prop3": 0.75
+        "débit_m3s": 0.001,
+        "elevation": 0.0
       },
       "results": {
         "flow_rate": 0.0,
         "pressure_out": 0.0
       }
     },
-    "junction_3pipes": {
+    "T3p": {
       "display_name": "Jonction 3 Tuyaux",
       "description": "Jonction pour 3 tuyaux",
       "icon_svg": "icons/connexions/connexion_3pipes.svg",
       "color": "#1E90FF",
       "equipment_class": "TeeConnectionEquipment",
       "properties": {
-        "prop1": 100.0,
-        "prop2": 50.0,
-        "prop3": 0.75
+        "diameter_m": 0.1,
+        "elevation": 0.0
       },
       "results": {
         "flow_rate_1": 0.0,
