--- a/src/flowcad/config/equipment/equipment_config.json
+++ b/src/flowcad/config/equipment/equipment_config.json
@@ -85,8 +85,11 @@
       },
       "results": {
         "flow_rate": 0.0,
-        "pressure_in": 0.0,
-        "pressure_out": 0.0
+        "pressure_1": 0.0,
+        "head_1": 0.0,
+        "pressure_2": 0.0,
+        "head_2": 0.0,
+        "head_gain": 0.0
       }
     },
     "V1": {
@@ -291,7 +294,8 @@
       },
       "results": {
         "flow_rate": 0.0,
-        "pressure_out": 0.0
+        "pressure_1": 0.0,  
+        "head_1": 0.0
       }
     },
     "BC_V": {
@@ -324,8 +328,11 @@
         "flow_rate_2": 0.0,
         "flow_rate_3": 0.0,
         "pressure_1": 0.0,
+        "head_1": 0.0,
         "pressure_2": 0.0,
-        "pressure_3": 0.0
+        "head_2": 0.0,
+        "pressure_3": 0.0,
+        "head_3": 0.0
       }
     }
   }
