feat(svg): Implement SVG content and style management
- Added SVGContentHandler for managing SVG text modifications and visibility.
- Introduced SVGDynamicManager to serve as a central point for SVG modifications, integrating content and style handlers.
- Created SVGStyleHandler to manage SVG styles, with a temporary compatibility layer for legacy style management.
- Developed a comprehensive test suite for SVG migration, covering equipment creation, state changes, cache verification, style modifications, and scaling tests.

--- a/src/flowcad/config/equipment/equipment_config.json
+++ b/src/flowcad/config/equipment/equipment_config.json
@@ -279,8 +279,18 @@
         "diameter_m": 2.0,
         "zeta": 1.0,
         "elevation": 0.0,
-        "opening_value": 100,
-        "valve_control_type": "binary"
+        "label_text": "A"
+      },
+      "svg_dynamic": {
+        "content": {
+          "text_elements": {
+            "Name": {
+              "property_link": "label_text",
+              "editable": true,
+              "default": "A"
+            }
+          }
+        }
       },
       "results": {
         "flow_rate": 0.0,
